--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Food Explorer</title>
 </head>
 
 <body>
